<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.WelcomeActivity">

    <!--  background  -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_wc" />

    <!-- Sign In-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/shadow_shape" />

    <LinearLayout
        android:id="@+id/lbl_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="70dp"
        android:layout_marginBottom="54dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/sofia_pro_regular_az"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/sofia_pro_regular_az"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lbl_sign_in"
        android:layout_marginHorizontal="37dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/authentication_shape"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:paddingVertical="13dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_facebook" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/sofia_pro_semi_bold_az"
                    android:text="FACEBOOK"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="13sp" />


            </LinearLayout>

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/authentication_shape"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:paddingVertical="13dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/sofia_pro_semi_bold_az"
                    android:text="GOOGLE"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:background="@drawable/auth_em_ph_shape"
            android:fontFamily="@font/sofia_pro_regular_az"
            android:gravity="center_horizontal"
            android:lines="1"
            android:paddingVertical="18dp"
            android:text="Start with email or phone"
            android:textColor="#FEFEFE"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_lbl_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_login"
        android:layout_marginHorizontal="37dp"
        android:layout_marginBottom="19dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="22dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/sofia_pro_medium_az"
            android:gravity="center"
            android:text="@string/sign_in_with"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="22dp"
            android:layout_weight="1"
            android:background="@color/white" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear_lbl_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="37dp"
        android:layout_marginBottom="170dp"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/sofia_pro_bold_az"
            android:lineSpacingExtra="10dp"
            android:lines="2"
            android:text="@string/welcome_to_nfoodhub"
            android:textColor="@color/black"
            android:textSize="53sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sofia_pro_regular_az"
            android:lineSpacingExtra="8dp"
            android:lines="2"
            android:text="Your favourite foods delivered  \nfast at your door."
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <include layout="@layout/toolbar" />


</RelativeLayout>